[tool.poetry]
name = "monitor-gols"
version = "0.1.0"
description = "Modelo de probabilidade de gol em tempo real"
authors = ["Bernardo <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
